loco-new/tests/templates/snapshots/r#mod__templates__db__cargo_dependencies_Sqlite.snap
---
source: tests/templates/db.rs
expression: "content.get(\"dependencies\").unwrap()"
---
{ async-trait = { version = "0.1" }, axum = { version = "0.8" }, chrono = { version = "0.4" }, loco-rs = { workspace = true }, migration = { path = "migration" }, regex = { version = "1.11" }, sea-orm = { features = ["sqlx-sqlite", "sqlx-postgres", "runtime-tokio-rustls", "macros"], version = "2.0" }, serde = { features = ["derive"], version = "1" }, serde_json = { version = "1" }, tokio = { default-features = false, features = ["rt-multi-thread"], version = "1.45" }, tracing = { version = "0.1" }, tracing-subscriber = { features = ["env-filter", "json"], version = "0.3" }, ts-rs = { features = ["chrono-impl", "serde-compat"], version = "12" }, uuid = { features = ["v4"], version = "1.6" }, validator = { version = "0.20" } }
