loco-new/tests/templates/snapshots/r#mod__templates__db__config_test_yaml_config_database_Sqlite.snap
---
source: tests/templates/db.rs
expression: "format!(\"{:#?}\",\nassertion::yaml::get_value_at_path(&content, &[\"database\"]).unwrap())"
---
Mapping {
    "uri": String("<%= get_env(name=\"DATABASE_URL\", default=\"sqlite://loco-app-test_test.sqlite?mode=rwc\") %>"),
    "enable_logging": Bool(false),
    "connect_timeout": String("<%= get_env(name=\"DB_CONNECT_TIMEOUT\", default=\"500\") %>"),
    "idle_timeout": String("<%= get_env(name=\"DB_IDLE_TIMEOUT\", default=\"500\") %>"),
    "min_connections": String("<%= get_env(name=\"DB_MIN_CONNECTIONS\", default=\"1\") %>"),
    "max_connections": String("<%= get_env(name=\"DB_MAX_CONNECTIONS\", default=\"1\") %>"),
    "auto_migrate": Bool(true),
    "dangerously_truncate": Bool(true),
    "dangerously_recreate": Bool(true),
}
